# actix_reqwest_app

./: Cargo.toml
src/: main.rs
