[package]
name = "rust-make-http-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
actix-web = "4"

